force-app/main/default/objects/Closing_Form__c/Closing_Form__c.object-meta.xml
<CustomObject>
    <label>Contract Request</label>
    <nameField>
        <displayFormat>RF-{0000}</displayFormat>
        <label>Closing Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Request</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>