force-app/main/default/objects/Closing_Form__c/fields/Agency_License__c.field-meta.xml
<CustomField>
    <fullName>Agency_License__c</fullName>
    <label>Seller Agency License?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>