force-app/main/default/objects/Closing_Form__c/fields/Agreed_Timescale__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Timescale__c</fullName>
    <label>Agreed Timescale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>