force-app/main/default/objects/Closing_Form__c/fields/Annual_Rent__c.field-meta.xml
<CustomField>
    <fullName>Annual_Rent__c</fullName>
    <label>Annual Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>