force-app/main/default/objects/Closing_Form__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>