force-app/main/default/objects/Closing_Form__c/fields/BRN__c.field-meta.xml
<CustomField>
    <fullName>BRN__c</fullName>
    <label>Seller Agent BRN?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>