force-app/main/default/objects/Closing_Form__c/fields/Buyer_Agency_ORN__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Agency_ORN__c</fullName>
    <label>Buyer Agency ORN?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>