force-app/main/default/objects/Closing_Form__c/fields/Buyer_Agent_BRN__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Agent_BRN__c</fullName>
    <label>Buyer Agent BRN?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>