force-app/main/default/objects/Closing_Form__c/fields/Buyer_Agent_Structure__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Agent_Structure__c</fullName>
    <label>Buyer Agent Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agent_Structure</valueSetName>
    </valueSet>
</CustomField>