force-app/main/default/objects/Closing_Form__c/fields/Buyer_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Contact_Number__c</fullName>
    <label>Buyer Contact Number (With Country Code)</label>
    <type>Phone</type>
</CustomField>