force-app/main/default/objects/Closing_Form__c/fields/Buyer_EID__c.field-meta.xml
<CustomField>
    <fullName>Buyer_EID__c</fullName>
    <label>Buyer EID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>