force-app/main/default/objects/Closing_Form__c/fields/Buyer_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Email_Address__c</fullName>
    <label>Buyer Email Address</label>
    <type>Email</type>
</CustomField>