force-app/main/default/objects/Closing_Form__c/fields/Buyer_Lending_Bank__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Lending_Bank__c</fullName>
    <label>Buyer Lending Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>