force-app/main/default/objects/Closing_Form__c/fields/Buyer_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Passport_Number__c</fullName>
    <label>Buyer Passport Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>