force-app/main/default/objects/Closing_Form__c/fields/Buyer_Type__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Type__c</fullName>
    <label>Buyer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>