force-app/main/default/objects/Closing_Form__c/fields/Buyer_UAE_Visa__c.field-meta.xml
<CustomField>
    <fullName>Buyer_UAE_Visa__c</fullName>
    <label>Buyer UAE Visa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>