force-app/main/default/objects/Closing_Form__c/fields/Deal_Duration__c.field-meta.xml
<CustomField>
    <fullName>Deal_Duration__c</fullName>
    <label>Contract Duration (Calendar Days)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>