force-app/main/default/objects/Closing_Form__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finance Seller to Finance Buyer</fullName>
            </value>
            <value>
                <fullName>Finance Seller to Cash Buyer</fullName>
            </value>
            <value>
                <fullName>Cash Seller to Finance Buyer</fullName>
            </value>
            <value>
                <fullName>Cash Seller to Cash Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>