force-app/main/default/objects/Closing_Form__c/fields/Deposit_Held_By__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Held_By__c</fullName>
    <label>Deposit Held By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>