force-app/main/default/objects/Closing_Form__c/fields/Developer_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Developer_Email_Address__c</fullName>
    <label>Developer Email Address</label>
    <type>Email</type>
</CustomField>