force-app/main/default/objects/Closing_Form__c/fields/Developer_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Developer_Mobile_Number__c</fullName>
    <label>Developer Mobile Number</label>
    <type>Phone</type>
</CustomField>