force-app/main/default/objects/Closing_Form__c/fields/DSIR_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>DSIR_Commission_Amount__c</fullName>
    <label>DSIR Commission Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>