force-app/main/default/objects/Closing_Form__c/fields/Estimated_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Transfer_Date__c</fullName>
    <label>Estimated Transfer Date</label>
    <type>Date</type>
</CustomField>