force-app/main/default/objects/Closing_Form__c/fields/External_Brokerage_Amount__c.field-meta.xml
<CustomField>
    <fullName>External_Brokerage_Amount__c</fullName>
    <label>External Brokerage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>