force-app/main/default/objects/Closing_Form__c/fields/External_Brokerage_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Brokerage_Name__c</fullName>
    <label>External Brokerage Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>