force-app/main/default/objects/Closing_Form__c/fields/Finance_Conditional__c.field-meta.xml
<CustomField>
    <fullName>Finance_Conditional__c</fullName>
    <label>Finance Conditional</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>