force-app/main/default/objects/Closing_Form__c/fields/First_Broker__c.field-meta.xml
<CustomField>
    <fullName>First_Broker__c</fullName>
    <label>First Broker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>