force-app/main/default/objects/Closing_Form__c/fields/Fouth_Broker__c.field-meta.xml
<CustomField>
    <fullName>Fouth_Broker__c</fullName>
    <label>Fouth Broker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>