force-app/main/default/objects/Closing_Form__c/fields/Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Inquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Inquiry (If Applicable)</label>
    <referenceTo>pba__Request__c</referenceTo>
    <relationshipName>Closing_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>