force-app/main/default/objects/Closing_Form__c/fields/Is_10depositDetails__c.field-meta.xml
<CustomField>
    <fullName>Is_10depositDetails__c</fullName>
    <label>10% Deposit Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Cheque</fullName>
            </value>
            <value>
                <fullName>Manger&apos;s Cheque</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>