force-app/main/default/objects/Closing_Form__c/fields/Is_Buyer_UAE_Resident__c.field-meta.xml
<CustomField>
    <fullName>Is_Buyer_UAE_Resident__c</fullName>
    <label>Is Buyer UAE Resident?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>