force-app/main/default/objects/Closing_Form__c/fields/Is_the_Seller_Direct__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Seller_Direct__c</fullName>
    <label>Is the Seller Direct?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>