force-app/main/default/objects/Closing_Form__c/fields/Landlord_Agency_Fee__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Agency_Fee__c</fullName>
    <label>Landlord Agency Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>