force-app/main/default/objects/Closing_Form__c/fields/Landlord_Agent_Structure__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Agent_Structure__c</fullName>
    <label>Landlord Agent Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agent_Structure</valueSetName>
    </valueSet>
</CustomField>