force-app/main/default/objects/Closing_Form__c/fields/Landlord_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Contact_Number__c</fullName>
    <label>Landlord Contact Number</label>
    <type>Phone</type>
</CustomField>