force-app/main/default/objects/Closing_Form__c/fields/Landlord_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Email_Address__c</fullName>
    <label>Landlord Email Address</label>
    <type>Email</type>
</CustomField>