force-app/main/default/objects/Closing_Form__c/fields/Landlord_Represented_By__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Represented_By__c</fullName>
    <label>Agent Name Representing Landlord</label>
    <length>200</length>
    <type>Text</type>
</CustomField>