force-app/main/default/objects/Closing_Form__c/fields/Listing_Reference_Number_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Listing_Reference_Number_if_applicable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing Reference Number (if applicable)</label>
    <referenceTo>pba__Listing__c</referenceTo>
    <relationshipName>Closing_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>