force-app/main/default/objects/Closing_Form__c/fields/Listing_Type__c.field-meta.xml
<CustomField>
    <fullName>Listing_Type__c</fullName>
    <label>Listing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company Listing</fullName>
            </value>
            <value>
                <fullName>External Listing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>