force-app/main/default/objects/Closing_Form__c/fields/Number_of_bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_bedrooms__c</fullName>
    <label>Number of bedrooms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>