force-app/main/default/objects/Closing_Form__c/fields/ORN__c.field-meta.xml
<CustomField>
    <fullName>ORN__c</fullName>
    <label>Seller Agency ORN?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>