force-app/main/default/objects/Closing_Form__c/fields/Property_Mortgaged__c.field-meta.xml
<CustomField>
    <fullName>Property_Mortgaged__c</fullName>
    <label>Property Mortgaged</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>