force-app/main/default/objects/Closing_Form__c/fields/Receiving_Agent__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Agent__c</fullName>
    <label>Receiving Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>