force-app/main/default/objects/Closing_Form__c/fields/Receiving_Office__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Office__c</fullName>
    <label>Receiving Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>