force-app/main/default/objects/Closing_Form__c/fields/Referral_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Referral_Contact_Email__c</fullName>
    <label>Referral Contact Email</label>
    <type>Email</type>
</CustomField>