force-app/main/default/objects/Closing_Form__c/fields/Referral_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Contact_Name__c</fullName>
    <label>Referral Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>