force-app/main/default/objects/Closing_Form__c/fields/Referral_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Referral_Contact_Number__c</fullName>
    <label>Referral Contact Number</label>
    <type>Phone</type>
</CustomField>