force-app/main/default/objects/Closing_Form__c/fields/Referral_fee__c.field-meta.xml
<CustomField>
    <fullName>Referral_fee__c</fullName>
    <label>Referral fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>