force-app/main/default/objects/Closing_Form__c/fields/Referring_Agent__c.field-meta.xml
<CustomField>
    <fullName>Referring_Agent__c</fullName>
    <label>Referring Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>