force-app/main/default/objects/Closing_Form__c/fields/Referring_Office__c.field-meta.xml
<CustomField>
    <fullName>Referring_Office__c</fullName>
    <label>Referring Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>