force-app/main/default/objects/Closing_Form__c/fields/Second_Broker__c.field-meta.xml
<CustomField>
    <fullName>Second_Broker__c</fullName>
    <label>Second Broker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>