force-app/main/default/objects/Closing_Form__c/fields/Second_Broker_Amount__c.field-meta.xml
<CustomField>
    <fullName>Second_Broker_Amount__c</fullName>
    <label>Second Broker Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>