force-app/main/default/objects/Closing_Form__c/fields/Seller_Agency_Fee__c.field-meta.xml
<CustomField>
    <fullName>Seller_Agency_Fee__c</fullName>
    <label>Seller Agency Fee (Excluding VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>