force-app/main/default/objects/Closing_Form__c/fields/Seller_Agent_Structure__c.field-meta.xml
<CustomField>
    <fullName>Seller_Agent_Structure__c</fullName>
    <label>Seller Agent Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agent_Structure</valueSetName>
    </valueSet>
</CustomField>