force-app/main/default/objects/Closing_Form__c/fields/Seller_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Seller_Client_Type__c</fullName>
    <label>Seller Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Sole Agent</fullName>
            </value>
            <value>
                <fullName>Internal Multiple Agents</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>