force-app/main/default/objects/Closing_Form__c/fields/Seller_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Seller_Contact_Number__c</fullName>
    <label>Seller Contact Number</label>
    <type>Phone</type>
</CustomField>