force-app/main/default/objects/Closing_Form__c/fields/Seller_Conveyancing_Fee_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Seller_Conveyancing_Fee_Paid_By__c</fullName>
    <label>Seller Conveyancing Fee Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>DSIR Agent</fullName>
            </value>
            <value>
                <fullName>External Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>