force-app/main/default/objects/Closing_Form__c/fields/Seller_EID__c.field-meta.xml
<CustomField>
    <fullName>Seller_EID__c</fullName>
    <label>Seller EID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>