force-app/main/default/objects/Closing_Form__c/fields/Seller_Lending_Bank__c.field-meta.xml
<CustomField>
    <fullName>Seller_Lending_Bank__c</fullName>
    <label>Seller Lending Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>