force-app/main/default/objects/Closing_Form__c/fields/Seller_Passport__c.field-meta.xml
<CustomField>
    <fullName>Seller_Passport__c</fullName>
    <label>Seller Passport</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>