force-app/main/default/objects/Closing_Form__c/fields/Seller_Represented_By__c.field-meta.xml
<CustomField>
    <fullName>Seller_Represented_By__c</fullName>
    <label>Seller Represented By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>