force-app/main/default/objects/Closing_Form__c/fields/Sotheby_s_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Sotheby_s_Affiliate__c</fullName>
    <label>Sotheby&apos;s Affiliate ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>