force-app/main/default/objects/Closing_Form__c/fields/Source_of_fund_Received__c.field-meta.xml
<CustomField>
    <fullName>Source_of_fund_Received__c</fullName>
    <label>Source of fund Received ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>