force-app/main/default/objects/Closing_Form__c/fields/Special_Commercial_Term__c.field-meta.xml
<CustomField>
    <fullName>Special_Commercial_Term__c</fullName>
    <label>Special Commercial Term</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>