force-app/main/default/objects/Closing_Form__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>